--- a/FlowersInventory/requirements.txt
+++ b/FlowersInventory/requirements.txt
@@ -1,7 +1,7 @@
+pandas==1.1.5
 django~=3.2.19
 xlrd~=2.0.1
-pandas~=1.1.5
 tablib~=3.1.0
 openpyxl~=3.1.2
-matplotlib~=3.3.4
 requests~=2.27.1
+psycopg2-binary
