--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["lesslymejia <111783028+lesslymejia@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "3.7"
 django = ">=3.2.19,<3.3.0"
 pandas = "2.1.0"
 xlrd = ">=2.0.1,<2.1.0"
