--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openpyxl = ">=3.1.2,<3.2.0"
 requests = ">=2.27.1,<2.28.0"
 psycopg2-binary = "^2.9.7"
 dj-database-url = "^2.1.0"
+gunicorn = "^21.2.0"
 
 
 
