--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: flowersinventory
-    databaseName: flowersinventory
-    user: flowersinventory
+  - name: lesslysflowersinventoryapp
+    databaseName: lesslysflowersinventoryapp
+    user: lesslysflowersinventoryapp
 
 services:
   - type: web
-    name: flowersinventory
+    name: lesslysflowersinventoryapp
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn flowersinventory.wsgi:application"
+    startCommand: "gunicorn lesslysflowersinventoryapp.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: flowersinventory
+          name: lesslysflowersinventoryapp
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
