--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: lesslysflowersinventoryapp
-    databaseName: lesslysflowersinventoryapp
-    user: lesslysflowersinventoryapp
+  - name: flowersinventory
+    databaseName: flowersinventory
+    user: flowersinventory
 
 services:
   - type: web
-    name: lesslysflowersinventoryapp
+    name: flowersinventory
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn lesslysflowersinventoryapp.wsgi:application"
+    startCommand: "gunicorn flowersinventory.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: lesslysflowersinventoryapp
+          name: flowersinventory
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
