--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     name: flowersinventory
     runtime: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn flowersinventory.wsgi:application"
+    startCommand: "gunicorn FlowersInventory.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
